2011-05-14  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected time zone handling in sample parse date method, resolves #26292
	* Properly localized all strings in extension configuration, resolves #13647

2011-05-06  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected bug with wrongly preserved MM-relations when no mapping is available, resolves #26661

2011-04-05  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed French translations, resolves #25712

2011-03-15  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for self-referential mappings, resolves #13852
	* Corrected bug with disabling of TCEmain logging, resolves #13855

 2011-03-14  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Dropped Gabriel support, resolves #13834

2011-03-08  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.2.0

2011-03-05  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to disable TCEmain logging, resolves #10663

2011-02-17  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed value of flushOutput configuration option to off

2011-02-16  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added property for trimming input data, resolves #12666

2011-01-25  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added SQL condition to restrict the set of records being acted upon during import, resolves #10676

2011-01-11  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added softer matching methods to value mappings, resolves #12090

2011-01-10  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected data sample creation for XML format, resolves #12028

2011-01-09  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for XPath queries relative to selected nodes in XML data, resolves #12027

2011-01-07  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to retrieve values from node attributes in XML data, resolves #12004
	* Corrected import process to abort it when import data type is not defined, resolves #12001
