@@ -1,10 +1,10 @@
 # customsubcategory=reporting=LLL:EXT:external_import/locallang.xml:config.reporting
 # customsubcategory=debugging=LLL:EXT:external_import/locallang.xml:config.debugging
 
-# cat=basic//; type=int; label=LLL:EXT:external_import/locallang.xml:config.storagePid
+# cat=basic//a; type=int; label=LLL:EXT:external_import/locallang.xml:config.storagePid
 storagePID = 0
 
-# cat=basic//; type=int; label=LLL:EXT:external_import/locallang.xml:config.timeLimit
+# cat=basic//b; type=int; label=LLL:EXT:external_import/locallang.xml:config.timeLimit
 timelimit = -1
 
 # cat=basic/reporting/a; type=string; label=LLL:EXT:external_import/locallang.xml:config.reportEmail
